--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
