--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "isomorphic-fetch": "^3.0.0",
     "mysql2": "^3.9.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
