--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
