--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.1.1",
     "vite": "^5.1.4"
-  }
+  },
+  "homepage": "https://jordiciurana16.github.io/vitora"
 }
