--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
+    "chartjs-chart-geo": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "isomorphic-fetch": "^3.0.0",
@@ -21,6 +23,7 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.20.1",
