--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chartjs-chart-geo": "^4.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "highcharts": "^11.4.0",
     "isomorphic-fetch": "^3.0.0",
     "mysql2": "^3.9.1",
     "node-fetch": "^3.3.2",
