--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "highcharts": "^11.4.0",
     "isomorphic-fetch": "^3.0.0",
+    "lottie-web": "^5.12.2",
     "mysql2": "^3.9.1",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
