--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://jordiciurana16.github.io/vitora",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -45,6 +47,5 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.1.1",
     "vite": "^5.1.4"
-  },
-  "homepage": "https://jordiciurana16.github.io/vitora"
+  }
 }
